--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -59,15 +59,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="119" id="kof-g2-PET" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="375" height="119"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="139" id="kof-g2-PET" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="139"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kof-g2-PET" id="eNT-il-wt0">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="119"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="139"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Edl-Tt-z0t">
-                                            <rect key="frame" x="0.0" y="0.0" width="66" height="66"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="66" height="69"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="66" id="5cL-6z-elZ"/>
                                                 <constraint firstAttribute="height" constant="66" id="qZM-Oi-Kuc"/>
@@ -75,30 +75,57 @@
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rM3-vq-UCn">
                                             <rect key="frame" x="74" y="0.0" width="81" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="22" id="SmM-vN-NIq"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V6r-nd-qV6">
-                                            <rect key="frame" x="74" y="26" width="301" height="93"/>
+                                            <rect key="frame" x="74" y="26" width="301" height="66"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ms-za-h0b" userLabel="favButton">
+                                            <rect key="frame" x="315" y="92" width="58" height="44"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="favor-icon" title=" "/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="kof-g2-PET" eventType="touchUpInside" id="cc2-fO-Nhl"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3J-xO-gYq" userLabel="retweetButton">
+                                            <rect key="frame" x="273" y="95" width="58" height="44"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="retweet-icon" title=" "/>
+                                            <connections>
+                                                <action selector="retweet:" destination="kof-g2-PET" eventType="touchUpInside" id="87y-gp-bN9"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="V6r-nd-qV6" secondAttribute="bottom" id="1su-xU-IBH"/>
+                                        <constraint firstAttribute="bottom" secondItem="v3J-xO-gYq" secondAttribute="bottom" constant="3" id="6oI-7h-3vn"/>
+                                        <constraint firstItem="4ms-za-h0b" firstAttribute="top" secondItem="V6r-nd-qV6" secondAttribute="bottom" id="9CA-Vr-cJL"/>
+                                        <constraint firstItem="v3J-xO-gYq" firstAttribute="top" secondItem="V6r-nd-qV6" secondAttribute="bottom" id="BOs-qa-ZvD"/>
+                                        <constraint firstAttribute="bottom" secondItem="Edl-Tt-z0t" secondAttribute="bottom" constant="70" id="HKt-MW-G0e"/>
                                         <constraint firstItem="V6r-nd-qV6" firstAttribute="top" secondItem="rM3-vq-UCn" secondAttribute="bottom" constant="4" id="Ifb-4u-eDy"/>
                                         <constraint firstItem="rM3-vq-UCn" firstAttribute="top" secondItem="eNT-il-wt0" secondAttribute="top" id="Lei-3d-H4y"/>
                                         <constraint firstItem="Edl-Tt-z0t" firstAttribute="leading" secondItem="eNT-il-wt0" secondAttribute="leading" id="Pa5-NF-aEc"/>
+                                        <constraint firstItem="4ms-za-h0b" firstAttribute="leading" secondItem="v3J-xO-gYq" secondAttribute="trailing" constant="1" id="SZb-mV-K6o"/>
                                         <constraint firstAttribute="trailing" secondItem="V6r-nd-qV6" secondAttribute="trailing" id="UZC-3m-IJr"/>
+                                        <constraint firstAttribute="trailing" secondItem="4ms-za-h0b" secondAttribute="trailing" constant="2" id="WBS-yB-Jqb"/>
                                         <constraint firstItem="rM3-vq-UCn" firstAttribute="leading" secondItem="Edl-Tt-z0t" secondAttribute="trailing" constant="8" id="gYv-Yg-6a0"/>
                                         <constraint firstItem="V6r-nd-qV6" firstAttribute="leading" secondItem="Edl-Tt-z0t" secondAttribute="trailing" constant="8" id="gmq-3D-Oc9"/>
+                                        <constraint firstAttribute="bottom" secondItem="4ms-za-h0b" secondAttribute="bottom" constant="3" id="oX3-CA-bSq"/>
                                         <constraint firstItem="Edl-Tt-z0t" firstAttribute="top" secondItem="eNT-il-wt0" secondAttribute="top" id="rA2-K5-Qsq"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="4ms-za-h0b" id="cKO-bS-3PK"/>
                                     <outlet property="profileImageView" destination="Edl-Tt-z0t" id="11G-p8-mQx"/>
+                                    <outlet property="retweetButton" destination="v3J-xO-gYq" id="Moe-u3-s7W"/>
                                     <outlet property="tweetContent" destination="V6r-nd-qV6" id="SBK-Fl-Lq2"/>
                                     <outlet property="userNameLabel" destination="rM3-vq-UCn" id="nQT-cv-UEQ"/>
                                 </connections>
@@ -109,6 +136,7 @@
                             <outlet property="delegate" destination="o0H-e9-cTF" id="uVe-PO-sLV"/>
                         </connections>
                     </tableView>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Home" id="lMI-4K-1SP">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="zLO-wD-m3K">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -116,11 +144,67 @@
                                 <action selector="onLogout:" destination="o0H-e9-cTF" id="H0t-OA-Nh2"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" style="plain" id="38v-5U-g1T">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="6bR-bU-WcX" kind="presentation" id="Tfp-r3-Bsw"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UBs-DH-ztg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="724" y="-195.6521739130435"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="WAT-Ff-LPV">
+            <objects>
+                <viewController id="cpG-KA-F3m" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Chz-EO-X37">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qRw-Im-eSU">
+                                <rect key="frame" x="0.0" y="44" width="375" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="uwa-ul-ZjJ"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="veJ-b3-F6J"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="qRw-Im-eSU" firstAttribute="leading" secondItem="veJ-b3-F6J" secondAttribute="leading" id="8QH-8T-j5G"/>
+                            <constraint firstItem="qRw-Im-eSU" firstAttribute="top" secondItem="veJ-b3-F6J" secondAttribute="top" id="Qjc-0U-PAB"/>
+                            <constraint firstItem="veJ-b3-F6J" firstAttribute="trailing" secondItem="qRw-Im-eSU" secondAttribute="trailing" id="pp0-HT-hXv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="AMZ-1w-YCa">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" style="plain" id="FNV-LT-eFD">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="Cancel:" destination="cpG-KA-F3m" id="WLe-QT-bff"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" style="plain" id="f71-ip-f4e">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="Tweet:" destination="cpG-KA-F3m" id="ABZ-Oz-evo"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="qRw-Im-eSU" id="dIM-Lr-NJS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mXm-va-X9Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2498" y="-217"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qAR-B3-zWe">
@@ -155,8 +239,47 @@
             </objects>
             <point key="canvasLocation" x="-57" y="-194"/>
         </scene>
+        <!--Tweet Navigation Controller-->
+        <scene sceneID="oqu-SF-hUs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="6bR-bU-WcX" userLabel="Tweet Navigation Controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uQo-7N-kfu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.32107432489999999" green="0.60131438569999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" systemColor="labelColor"/>
+                        </textAttributes>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" red="0.32107432489999999" green="0.60131438569999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </navigationBarAppearance>
+                        <navigationBarAppearance key="scrollEdgeAppearance">
+                            <color key="backgroundColor" red="0.32107432489999999" green="0.60131438569999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <textAttributes key="titleTextAttributes">
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </textAttributes>
+                        </navigationBarAppearance>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cpG-KA-F3m" kind="relationship" relationship="rootViewController" id="nnY-OR-v6J"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DnK-uB-jhU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1492" y="-201.04947526236884"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
